i18n/versioned_docs/ja-jp/docusaurus-plugin-content-docs/version-3.18/scalardb-sql/jdbc-guide.mdx
---
tags:
  - Enterprise Premium
displayed_sidebar: docsJapanese
---

# ScalarDB JDBC ガイド

import TranslationBanner from '/src/components/_translation-ja-jp.mdx';

<TranslationBanner />

ScalarDB JDBC の使用方法は、基本的に [Java JDBC API](https://docs.oracle.com/javase/8/docs/technotes/guides/jdbc/) に従います。
このガイドでは、ScalarDB JDBC に固有の重要なトピックをいくつか説明します。

## プロジェクトに ScalarDB JDBC ドライバーを追加する

Gradle を使用して ScalarDB JDBC ドライバーの依存関係を追加するには、次を使用します。`<VERSION>` は、使用している ScalarDB JDBC ドライバーと関連ライブラリのバージョンに置き換えます。

```gradle
dependencies {
    implementation 'com.scalar-labs:scalardb-sql-jdbc:<VERSION>'
    implementation 'com.scalar-labs:scalardb-cluster-java-client-sdk:<VERSION>'
}
```

Maven を使用して依存関係を追加するには、次のコマンドを使用します。`...` は、使用している ScalarDB JDBC ドライバーのバージョンに置き換えます。

```xml
<dependencies>
    <dependency>
        <groupId>com.scalar-labs</groupId>
        <artifactId>scalardb-sql-jdbc</artifactId>
        <version>...</version>
    </dependency>
    <dependency>
        <groupId>com.scalar-labs</groupId>
        <artifactId>scalardb-cluster-java-client-sdk</artifactId>
        <version>...</version>
    </dependency>
</dependencies>
```

## JDBC 接続 URL

ScalarDB JDBC の JDBC 接続 URL 形式は次のとおりです。

```console
jdbc:scalardb:<configuration file path>?<property name>=<property value>&<property name>=<property value>&...
```

例:

設定ファイルのパスのみを指定します:

```console
jdbc:scalardb:/path/to/database.properties
```

プロパティのみを指定します:

```console
jdbc:scalardb:?scalar.db.contact_points=localhost&scalar.db.username=cassandra&scalar.db.password=cassandra&scalar.db.storage=cassandra
```

設定ファイルのパスとプロパティを指定します。

```console
jdbc:scalardb:/path/to/database.properties?scalar.db.metadata.cache_expiration_time_secs=0
```

## ScalarDB JDBC の設定

設定の詳細については、[ScalarDB Cluster SQL クライアント設定](../scalardb-cluster/developer-guide-for-scalardb-cluster-with-java-api.mdx#scalardb-cluster-sql-クライアント設定)を参照してください。

さらに、ScalarDB JDBC 固有の設定は次のとおりです。

| 名前                                                                 | 説明                                              | デフォルト |
|---------------------------------------------------------------------|---------------------------------------------------|----------|
| scalar.db.sql.jdbc.default_auto_commit                              | デフォルトの接続の自動コミットモード。                  | true     |
| scalar.db.sql.jdbc.default_read_only                                | 接続のデフォルトの読み取り専用状態。                    | false    |
| scalar.db.sql.jdbc.sql_session_factory_cache.expiration_time_millis | SQL セッションファクトリのキャッシュの有効期限 (ミリ秒)。 | 10000    |

## ScalarDB と JDBC 間のデータ型マッピング

ScalarDB は JDBC で定義されているすべてのデータ型をサポートしているわけではないため、以下では ScalarDB と JDBC 間のデータ型マッピングについて説明します。

ScalarDB と JDBC 間のデータ型マッピングは次のとおりです。

| ScalarDB タイプ | JDBC (Java) タイプ         |
|--------------|-------------------------|
| BOOLEAN      | boolean または Boolean     |
| INT          | int または Integer         |
| BIGINT       | long または Long           |
| FLOAT        | float または Float         |
| DOUBLE       | double または Double       |
| TEXT         | String                  |
| BLOB         | byte[] または java.sql.Blob |
| DATE         | java.time.LocalDate     |
| TIME         | java.time.LocalTime     |
| TIMESTAMP    | java.time.LocalDateTime |
| TIMESTAMPTZ  | java.time.Instant       |

BLOB 列の場合、書き込み時には `java.io.InputStream` も受け入れられます。以下の `PreparedStatement` の例を参照してください。

各データ型の `java.sql.ResultSet` オブジェクトからデータを取得する方法は次のとおりです。

```java
try (ResultSet resultSet = ...) {
  resultSet.next();

  // Get a BOOLEAN value of a column
  boolean booleanValue = resultSet.getBoolean("<column name>");

  // Get an INT value of a column
  int intValue = resultSet.getInt("<column name>");

  // Get a BIGINT value of a column
  long bigIntValue = resultSet.getLong("<column name>");

  // Get a FLOAT value of a column
  float floatValue = resultSet.getFloat("<column name>");

  // Get a DOUBLE value of a column
  double doubleValue = resultSet.getDouble("<column name>");

  // Get a TEXT value of a column
  String textValue = resultSet.getString("<column name>");

  // Get a BLOB value of a column as a byte array
  byte[] blobBytes = resultSet.getBytes("<column name>");

  // Get a BLOB value of a column as a java.sql.Blob
  // (this is also what resultSet.getObject returns for BLOB columns)
  Blob blob = resultSet.getBlob("<column name>");

  // Get a BLOB value of a column as a stream
  InputStream blobStream = resultSet.getBinaryStream("<column name>");
  
    // Get a DATE value of a column
  LocalDate dateValue = resultSet.getObject("<column name>", LocalDate.class);

  // Get a TIME value of a column
  LocalTime timeValue = resultSet.getObject("<column name>", LocalTime.class);

  // Get a TIMESTAMP value of a column
  LocalDateTime timestampValue = resultSet.getObject("<column name>", LocalDateTime.class);

  // Get a TIMESTAMPTZ value of a column
  Instant timestampTZValue = resultSet.getObject("<column name>", Instant.class);
}
```

`java.sql.PreparedStatement` オブジェクトの各データ型のパラメータとしてデータを設定する方法は次のとおりです。

```java
try (PreparedStatement preparedStatement = ...) {
  // Set a BOOLEAN value as parameter
  preparedStatement.setBoolean(1, <BOOLEAN value>);

  // Set an INT value as parameter
  preparedStatement.setInt(2, <INT value>);

  // Set a BIGINT value as parameter
  preparedStatement.setLong(3, <BIGINT value>);

  // Set a FLOAT value as parameter
  preparedStatement.setFloat(4, <FLOAT value>);

  // Set a DOUBLE value as parameter
  preparedStatement.setDouble(5, <DOUBLE value>);

  // Set a TEXT value as parameter
  preparedStatement.setString(6, "<TEXT value>");

  // Set a BLOB value as parameter (byte array)
  preparedStatement.setBytes(7, <byte[] value>);

  // Alternatively, if you have a java.sql.Blob (for example, one obtained from ResultSet.getBlob),
  // use preparedStatement.setBlob(7, <Blob value>);

  // Set a DATE value as parameter
  preparedStatement.setObject(8, <LocalDate value>);
  
  // Set a TIME value as parameter
  preparedStatement.setObject(9, <LocalTime value>);

  // Set a TIMESTAMP value as parameter
  preparedStatement.setObject(10, <LocalDateTime value>);

  // Set a TIMESTAMPTZ value as parameter
  preparedStatement.setObject(11, <Instant value>);

  preparedStatement.execute();
}
```

BLOB 列の場合、ドライバーはストリームから直接書き込みをサポートしています。`setBytes(int, byte[])` と `setBlob(int, java.sql.Blob)` に加えて、以下のオーバーロードを使用できます：

- `setBlob(int, java.io.InputStream)` と `setBlob(int, java.io.InputStream, long)`：ストリームからバイトを読み取ります（長さ付きのオーバーロードは指定されたバイト数を正確に読み取ります）。
- `setBinaryStream(int, java.io.InputStream)`、`setBinaryStream(int, java.io.InputStream, int)`、および `setBinaryStream(int, java.io.InputStream, long)`：同じパターンに従います。

## バッチステートメントの実行

ScalarDB JDBC ドライバーは、標準の JDBC 規約に従って、ミューテーションステートメントのバッチ実行をサポートしています。単一のラウンドトリップで多数の挿入、更新、または削除を適用する必要がある場合に使用します。

`java.sql.Statement` を使用した場合：

```java
try (Statement statement = connection.createStatement()) {
  statement.addBatch("INSERT INTO tbl (c1, c2) VALUES (1, 'a')");
  statement.addBatch("UPDATE tbl SET c2 = 'b' WHERE c1 = 2");
  statement.addBatch("DELETE FROM tbl WHERE c1 = 3");

  int[] updateCounts = statement.executeBatch();
}
```

`java.sql.PreparedStatement` を使用した場合：

```java
try (PreparedStatement preparedStatement =
    connection.prepareStatement("INSERT INTO tbl (c1, c2) VALUES (?, ?)")) {
  preparedStatement.setInt(1, 1);
  preparedStatement.setString(2, "a");
  preparedStatement.addBatch();

  preparedStatement.setInt(1, 2);
  preparedStatement.setString(2, "b");
  preparedStatement.addBatch();

  int[] updateCounts = preparedStatement.executeBatch();
}
```

バッチ実行はミューテーションステートメント（`INSERT`、`UPSERT`、`UPDATE`、および `DELETE`）に制限されています。`SELECT`、DDL、または DCL ステートメントを `addBatch(...)` に渡すと、その後の `executeBatch()` 呼び出しで `SQLException` がスローされます。

バッチ内の 1 つ以上のステートメントが失敗した場合、`executeBatch()` は `java.sql.BatchUpdateException` をスローします。`BatchUpdateException.getUpdateCounts()` を呼び出すことで、ステートメントごとの更新カウントを確認できます。

## SQLException の処理

例外処理は基本的に ScalarDB SQL API と同じです。

```java
// If you execute multiple statements in a transaction, you need to set auto-commit to false.
connection.setAutoCommit(false);

try {
  // Execute statements (SELECT/INSERT/UPDATE/DELETE) in the transaction
  ...

  // Commit the transaction
  connection.commit();
} catch (SQLException e) {
  if (e.getErrorCode() == 301) {
    // The error code 301 indicates that you catch `UnknownTransactionStatusException`.
    // If you catch `UnknownTransactionStatusException`, it indicates that the status of the 
    // transaction, whether it has succeeded or not, is unknown. In such a case, you need to check
    // if the transaction is committed successfully or not and retry it if it failed. How to 
    // identify a transaction status is delegated to users
  } else {
    // For other cases, you can try retrying the transaction

    // Rollback the transaction
    connection.rollback();

    // The cause of the exception can be `TransactionRetryableException` or the other
    // exceptions. For `TransactionRetryableException`, you can basically retry the transaction.
    // However, for the other exceptions, the transaction may still fail if the cause of the
    // exception is nontransient. For such a case, you need to limit the number of retries and
    // give up retrying
  }
}
```

例外処理の詳細については、[ScalarDB SQL API ガイド](sql-api-guide.mdx)も参照してください。

## 参考文献

- [Java JDBC API](https://docs.oracle.com/javase/8/docs/technotes/guides/jdbc/)
- [ScalarDB SQL API ガイド](sql-api-guide.mdx)
- [Javadoc for ScalarDB JDBC](https://javadoc.io/doc/com.scalar-labs/scalardb-sql-jdbc/3.18.1/index.html)
